--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,66 +8,69 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    timeout-minutes: 60
+    timeout-minutes: 90
     
     steps:
-    - name: 📥 Checkout code
+    - name: 📥 Checkout Repository
       uses: actions/checkout@v3
     
-    - name: 🐍 Set up Python
+    - name: 🐍 Set up Python 3.9
       uses: actions/setup-python@v4
       with:
         python-version: '3.9'
     
-    - name: 📦 Install system dependencies
+    - name: 📦 Install System Dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install -y openjdk-11-jdk unzip wget
+        sudo apt-get install -y openjdk-11-jdk unzip wget zip
+        sudo apt-get install -y build-essential libffi-dev libssl-dev
     
-    - name: 🔧 Install build tools
+    - name: 🔧 Install Python Build Tools
       run: |
-        pip install --upgrade pip
+        python -m pip install --upgrade pip
         pip install buildozer==1.5.0
         pip install cython==0.29.33
     
-    - name: 📝 Accept Android licenses
+    - name: 📝 Accept Android SDK Licenses
       run: |
-        mkdir -p ~/.android
-        echo "24333f8a63b6825ea9c5514f83c2829b004d1fee" > ~/.android/licenses/android-sdk-license
+        mkdir -p $HOME/.android
+        echo "24333f8a63b6825ea9c5514f83c2829b004d1fee" > $HOME/.android/licenses/android-sdk-license
+        echo "d56f5187479451eabf01fb78af6dfcb131a6481e" >> $HOME/.android/licenses/android-sdk-license
     
-    - name: 🔨 Build APK
+    - name: 🔨 Build APK with Buildozer
       run: |
         cd app
         buildozer android debug
-      continue-on-error: false
     
-    - name: 📤 Upload APK
+    - name: 📤 Upload APK as Artifact
       uses: actions/upload-artifact@v3
       if: success()
       with:
-        name: android-apk
+        name: fileexplorer-apk
         path: app/bin/*.apk
         retention-days: 30
     
-    - name: 📋 Build summary
+    - name: 📋 Show Build Results
       if: always()
       run: |
-        if [ -f app/bin/*.apk ]; then
-          echo "✅ APK built successfully"
+        echo "=== Checking for APK ==="
+        if ls app/bin/*.apk 1> /dev/null 2>&1; then
+          echo "✅ APK built successfully!"
           ls -lh app/bin/*.apk
         else
           echo "❌ APK build failed"
-          tail -100 app/.buildozer/logs/buildozer.log
+          echo "=== Last 50 lines of build log ==="
+          tail -50 app/.buildozer/logs/buildozer.log || echo "No log file found"
         fi
 ```
 
-4. **Scroll abajo** y haz clic en "Commit new file"
+4. **Scroll abajo** y haz clic en "Commit changes"
 
 ---
 
-### **Paso 5: Organizar los Archivos**
+### **Paso 4: Verificar la Estructura**
 
-Tu repositorio debe tener esta estructura:
+Tu repositorio ahora debería verse así:
 ```
 android-file-explorer/
 ├── .github/
